hphp/hack/test/typecheck/anonymous_shape4.php
<?hh //strict

function test(shape('x' => int) $s): void {
  $s->x;
}
